style.css
/* css reset */

/* 1. Use a more-intuitive box-sizing model */
*, *::before, *::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
*:not(dialog) {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Increase line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
  position: relative;
  color: #f5f5f5;
  background-color: #101828;
  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.8);
  min-height: 100vh; 
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

/* 6. Improve media defaults */
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input, button, textarea, select {
  font: inherit;
}

/* 8. Avoid text overflows */
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root, #__next {
  isolation: isolate;
}

/* styles */

.container{
    display: flex;
    flex-direction: column;
    gap: 40px;
    padding: 50px;
}

header{
    margin-bottom: 100px;
    padding: 50px;
    border-radius: 15px;
}
header h1{
    font-family: 'Courier New', Courier, monospace;
    font-size: 4rem;
    text-align: center;
    margin-bottom: 100px;
}
.slogan{
    display: flex;
    justify-content: space-around;
    align-items: center;   
}
.slogan p{
    font-family: 'Courier New', Courier, monospace;
    font-size: clamp(1px, 5vw, 2rem);
}

/* books */

.books{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
    gap: 50px;
}
.book{
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    background: rgba(0, 0, 0, 0.5);
    color: #f5f5f5;
    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.8);
    border-radius: 15px;
    padding: 30px;
    width: min(100%, 400px);
    margin: 0 auto;
}
.book-icon{
    font-size: clamp(5rem, 5vw, 6rem);
    color: #D4AF37;
}

/* book-read */

.book-read{
    display: flex;
    align-items: center;
    gap: 5px;
}
.read-button {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 50px;
    height: 50px;
    border: none;
    background: none;
    cursor: pointer;
}
.read-button i{
    font-size: 25px;
    line-height: 1;
}
.mdi-book-check{
    color: green;
}
.mdi-book-outline{
    color: #7DB9DE;
}
.remove-button{
    padding: 5px 45px;
    border-radius: 8px;
    margin-top: 25px;
    background-color: #CE8946;
    color: white;
    font-weight: bold;
    border: none;
    box-shadow: 0 0 5px 0 rgb(94, 79, 79);
}
.book-title{
    font-size: 1.5rem;
}
.book-author{
    font-size: 1.1rem;
}

/* form */

form{   
    display: grid;
    gap: 25px;
    justify-content: center;
    align-items: center;
    padding: 40px;
    margin-top: 100px;
    border-radius: 15px;
}
form h2{
    font-family: 'Courier New', Courier, monospace;
    font-size: clamp(2.5rem, 5vw, 3rem);
    text-align: center;
}
form p{
    font-family: 'Courier New', Courier, monospace;
    font-size: clamp(1rem, 5vw, 1.5rem);
    text-align: center;
    margin-bottom: 40px;
}
input{
    border-radius: 12px;
    border: 1px solid black;
    font-size: 100%;
    padding: 10px 25px;
    background-color: rgba(92, 91, 91, 0.7);
    color: white;
}
input:focus, input:active{
    outline: none;
    border: 2px solid rgb(113, 142, 152);
}
input:user-invalid {
    border-color: red;
}
input:user-valid {
    border-color: green;
}
form button {
    margin-top: 25px;
    border-radius: 12px;
    border: 1px solid black;
    font-size: 100%;
    font-weight: bold;
    padding: 6px clamp(16px, 5vw, 45px);
    color: white;
    background-color: #CE8946;
}
.form-group{
    display: flex;
    flex-direction: column;
    gap: 15px;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.form-group label{
    font-size: clamp(0.8rem, 5vw, 1.4rem);
}

/*  footer */

footer{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 25px;
    font-size: clamp(0.9rem, 5vw, 1rem);
    border-radius: 15px;
}
footer p a{
    color: #f5f5f5;
    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.8);
    text-decoration: none;
}

/* media query */

@media (max-width: 430px) {
    .books {
        grid-template-columns: 1fr;
    }
    .book-author{
        font-size: 0.8rem;
    }
    .book-title{
        font-size: 1.2rem;
    }
    header h1{
        font-size: 2.4rem;
    }
}

